# Task-2

./: CMakeLists.txt  CalculationExceptions.h  CalculationOperations.h  Calculator.cpp  Calculator.h  Define.cpp  Div.cpp  ExecutionContext.h  OperationInterface.h  OperationsCreator.h  OperationsFactory.h  main.cpp
CalculationOperations/: Cos.cpp  Mul.cpp  Pop.cpp  Print.cpp  Push.cpp  Sin.cpp  Sqrt.cpp  Sub.cpp  Sum.cpp
